Update zsh common config files

--- a/zsh/.config/zsh/conf.d/README
+++ b/zsh/.config/zsh/conf.d/README
@@ -1,1 +1,1 @@
-This directory (zsh) contains files that are common between all OS installations
+# This directory (zsh) contains files that are common between all OS installations
